<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Shells</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Shells</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Keep close to nature\'s heart\n\nwash your spirit clear \n\n -John Muir</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a shell</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Shell</string>

    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_pet">Edit Shell</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_successful">Shell saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_failed">Error with saving shell</string>

    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_successful">Shell updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_pet_failed">Error with updating shell</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_pet_successful">Shell deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_shell_failed">Error with deleting shell</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this shell?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_hole">Hole</string>

    <!-- Label for shell type information in the editor [CHAR LIMIT=30] -->
    <string name="category_type">Type</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="shell_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_shell_color">Color</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_weight">Weight</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_weight">kg</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="hole_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="no_hole">No Hole</string>

    <!-- Label for dropdown menu option if the shell has a hole [CHAR LIMIT=20] -->
    <string name="hole">Hole</string>

    <!-- Label for dropdown menu option if the shell's type is scallop [CHAR LIMIT=20] -->
    <string name="type_scallop">Scallop</string>

    <!-- Label for dropdown menu option if the shell's type is jingle [CHAR LIMIT=20] -->
    <string name="type_jingle">Jingle</string>

    <!-- Label for dropdown menu option if the shell is slipper [CHAR LIMIT=20] -->
    <string name="type_slipper">Slipper</string>

    <!-- Label for dropdown menu option if the shell is shard [CHAR LIMIT=20] -->
    <string name="type_shard">Shard</string>

    <!-- Label for the shell hole type if the hole is unknown [CHAR LIMIT=20] -->
    <string name="unknown_color">Unknown\n color</string>
    <!-- Label for the shell's type [CHAR LIMIT=20] -->
    <string name="scallops">Scallops</string>
    <string name="jingle">Jingle</string>
    <string name="slipper">Slipper</string>
    <string name="shard">Shard</string>
    <!-- place holder text in list item layout [CHAR LIMIT=20] -->
    <string name="name_assined_to_shell">Name assigned to shell</string>
    <string name="color_assigned_to_shell">Color Assigned to Shell</string>
    <string name="thumbnail_of_image_displayed">Thumbnail of Image Displayed</string>
    <string name="image_of_shell">image of shell</string>
    <!-- Labels used in the Editor layout [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="dollars">Dollars</string>
    <string name="sale">Sale</string>
    <string name="color">COLOR</string>
    <string name="order">Order</string>
    <string name="take_photo">Take photo</string>
    <string name="select_photo">Select photo</string>
    <string name="receive">RECEIVE</string>
    <string name="editor_sale">SALE</string>
    <!-- Labels for the shell info in list item layout [CHAR LIMIT=20] -->
    <string name="quantity_list">QTY:</string>
    <string name="price_list">Price: \s</string>
    <!-- filter for price edit text only allow numbers and . [CHAR LIMIT=20] -->
    <string name="only_numbers">0,1,2,3,4,5,6,7,8,9,.</string>
    <string name="dollar_symbol">$</string>

</resources>
